--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,17 @@
   "dependencies": {
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.2",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.10",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "@types/node": "^24.6.0",
+    "@types/node": "^24.7.0",
+    "@types/react-bootstrap": "^1.0.1",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
