--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.2",
     "axios": "^1.12.2",
@@ -17,6 +19,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
