--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 MONGODB_URI=mongodb+srv://rdamazonuser:e12345@cluster0.xomwf5v.mongodb.net/rdamazondb?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=somenthingsecret
+PAYPAL_CLIENT_ID=AeFfex3LKnzlJXCNW-xwSNXF5eHtCN23THYtTZbU23ze_o_QCqQODKoQTKpr0bfsj6FIOs6xGDd-iLP5
+PAYPAL_CLIENT_SECRET=EErguqGFYLpCslu0Pe5BNZ-H_FQatZiIVQN5pFH-FhcaHzCuFSQGdKyEZxfhLtgt5w-FxA0cHi0eeppp
